import groovy.sql.Sql


plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "5.0.0"
    id "com.github.spotbugs" version "2.0.0"


}
apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "main.Chuu"

group 'ish'
version '1.0'
apply plugin: 'java'

sourceCompatibility = 12
targetCompatibility = 12

repositories {
    mavenCentral()
    jcenter()
}
compileJava.options.encoding = 'UTF-8'

task connectToDb  {
    doLast {


        def properties = new Properties()
        file("src/main/resources/datasource.properties").withInputStream {
            properties.load(it)
        }
        def props = [user: properties."SimpleDataSource.user", password: properties."SimpleDataSource.password"] as Properties
        def url = properties."SimpleDataSource.url"
        def driver = properties."SimpleDataSource.driverClass"
        def sql = Sql.newInstance(url, props, driver)
        println properties.url
        sql.close()
    }
}

dependencies {
// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.5.4'

// https://mvnrepository.com/artifact/com.mchange/c3p0
    compile 'se.michaelthelin.spotify:spotify-web-api-java:2.1.2'
    compile 'ch.qos.logback:logback-classic:1.2.3'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
// https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.6'

    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile 'net.dv8tion:JDA:4.BETA.0_22'

    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'


// https://mvnrepository.com/artifact/c3p0/c3p0
// https://mvnrepository.com/artifact/com.github.jengelman.gradle.plugins/shadow

    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
    compile group: 'org.json', name: 'json', version: '20180130'

    //For Youtube search api
    compile 'com.google.api-client:google-api-client:1.28.0'
    compile 'com.google.apis:google-api-services-youtube:v3-rev209-1.25.0'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'

// https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-jpeg
    compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.4.1'
    compile group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.4.1'
    //String  difference
    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
    //Rescaler
    compile group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

    compile group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.11'

    compile group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.11'
// https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-svggen
    compile group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.11'
// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'

}
